1990-02-07  dickey@software.org

	* src/version.h:
	added 'showpath()' procedure to handle display of very-long
	paths.  modified '#' command to provide reset/set/all mode.

	* src/deduniq.c:
	rewrote, using 'level' argument to provide reset/set/all
	modes of operation.

	* src/ded.c:
	modified '#' command (deduniq-proc) to 3 modes of operation.

	* src/ded.hlp: modified '#' command to provide reset/set/all modes

1990-02-07  ste_cm@software.org

	* src/ded.hlp: BASELINE Mon Apr 30 09:54:01 1990 -- (CPROTO)

	* src/ded.hlp:
	BASELINE Thu Mar 29 07:37:55 1990 -- maintenance release (SYNTHESIS)

1990-02-01  dickey@software.org

	* src/showpath.c: RCS_BASE

1990-02-01  ste_cm@software.org

	* src/showpath.c: BASELINE Mon Apr 30 09:54:01 1990 -- (CPROTO)

	* src/showpath.c:
	BASELINE Mon Aug 13 15:06:41 1990 -- LINCNT, ADA_TRANS

	* src/showpath.c:
	BASELINE Thu Mar 29 07:37:55 1990 -- maintenance release (SYNTHESIS)

1990-02-01  dickey@software.org

	* src/ftree.c, src/ded.c:
	use 'showpath()' to handle long pathname-display

	* src/Makefile: added module 'showpath.c'

1990-01-30  dickey@software.org

	* src/version.h: added '-T' (and 'T' toggle) to show long date+time.
	added 0/2 repeat-count for ':' and '.' commands so we can
	reset/set clear-screen state from '!' or '%' commands.
	new 'T' toggle obsoletes 'T'-command, so this is changed to "2t"

	* src/ded2s.c:
	if 'T_opt' is set, display all date+time fields in long form,
	as returned by 'ctime()'

1990-01-30  ste_cm@software.org

	* src/ded2s.c:
	BASELINE Thu Mar 29 07:37:55 1990 -- maintenance release (SYNTHESIS)

1990-01-30  dickey@software.org

	* src/deddoit.c:
	pass 'sense' as argument to 'deddoit()' so user can alter the
	'clr_sh' flag explicitly.

	* src/ded.hlp:
	to ':' and '.' commands, added 0/2 repeat-count interpretation
	so user can alter refresh-state associated with '!' or '%'.
	also, added 'T' toggle (for date+time).  This obsoleted the
	'T' command for type-binary-file, which is now "2t".
