@@ -1,3 +1,7 @@
+1990-02-08  dickey@software.org
+
+	* src/deduniq.c: don't tag current entry unless other entries match!
+
 1990-02-07  dickey@software.org
 
 	* src/version.h:
